Dev-RBI/src/objects/Infrastructure_Near_Project__c.object
<CustomObject>
    <fields>
        <fullName>Distance_From_Project_In_Km__c</fullName>
        <label>Distance From Project (In Km)</label>
        <picklist>
            <picklistValues>
                <fullName>Within 5 KM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 KM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Than 10 KM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infra_Hyperlink__c</fullName>
        <description>This field is used in the related list of the project for the hyperlink</description>
        <formula>HYPERLINK(&quot;/&quot; + Id,   Infrastructure_Near_Project__r.Name ,  &quot;_blank&quot;)</formula>
        <label>Infrastructure Near Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Near_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Infrastructure Near Project</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Infrastructure Near Project</relationshipLabel>
        <relationshipName>Infrastructure_Near_Project</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Nr_Project__c</fullName>
        <formula>Infrastructure_Near_Project__r.Key__c</formula>
        <label>Infrastructure Nr Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjInfraUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>ProjInfraUniqueKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Proj_Id__c</fullName>
        <formula>Project_Id__c</formula>
        <label>Proj Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Id</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Infrastructure Near Project</relationshipLabel>
        <relationshipName>Infrastructure_Near_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Developed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <formula>Visit__c</formula>
        <label>Visit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores Visit Id</description>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Infrastructure Near Project</relationshipLabel>
        <relationshipName>Infrastructure_Near_Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VstInfraUniqueKey__c</fullName>
        <formula>LOWER(Infrastructure_Near_Project__r.Name &amp;  Visit__r.Name  )</formula>
        <label>VstInfraUniqueKey</label>
        <type>Text</type>
    </fields>
    <label>Infrastructure Near Project</label>
    <nameField>
        <displayFormat>INF-{0000000000}</displayFormat>
        <label>Infrastructure Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infrastructure Near Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Project_Id_Should_Not_be_blank_for_PMS_V</fullName>
        <active>true</active>
        <description>Project ID field should be blank for all the entities associated with PMS Visit</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Project_Id__c )), 
NOT(ISBLANK( Visit__c)) 

)</errorConditionFormula>
        <errorMessage>Please ensure that either Project Id or Visit Id is blank!</errorMessage>
    </validationRules>
</CustomObject>